--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mux/mux-node": "^7.3.2",
     "@mux/mux-player-react": "^2.1.0",
     "@prisma/client": "^5.5.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
@@ -30,6 +31,7 @@
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
     "react": "^18",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.47.0",
@@ -38,7 +40,8 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^5.7.2",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zustand": "^4.4.4"
   },
   "devDependencies": {
     "@types/node": "^20",
